swagger fine tuned, password fields emitted from rest responses
